I shat some text there

--- a/process-analysis/sections/learning-goals.tex
+++ b/process-analysis/sections/learning-goals.tex
@@ -11,10 +11,13 @@ to the first semester, this semester focuses more on the continuous-time
 (analog) aspects of electronic systems as well as interaction with the
 surroundings in greater detail.}
 
-At the start of the project and before the status seminar we discussed our personal learning goals, but also the ones set by the university.  Each member was responsible for achieving their own personal learning goals and in collaboration we aimed to achieve the learning goals set by the university.\\
+At the start of the project and before the status seminar we discussed our personal learning goals, but also the ones set by the university. Each member was responsible for achieving their own personal learning goals and in collaboration we aimed to achieve the learning goals set by the university.
 
 The group had a few common learnings goals which included learning how to apply analog sensors, knowledge about 2D/3D mapping, improving group collaboration and how to use CAD software.
+
 \section{Discussion and Conclusion}
+
+Getting our learning goals materialized was still hard to do, up until we had our status seminar and where we got some guidance from the supervisors. Personal learning goals should reflect on one student's ambition on what he or she would like to learn during a set semester and to what extend should it deepen its understanding in the set topic. Initially we set our learning goals too broad, which could have easily backfired us by the end of the semester, as we haven't concreticized the level of understanding that we would like to achieve. This was pointed out by our supervisors and after the input, all of our learning goals were changed and made more concrete. Setting our personal learning goals around our project seems to be logical, but having set our learning goals first, might have saved us some time to find a project to work on. Coming up with learning goals before concretisizing our project, could help us to: get a project we all have high level of interest in, formulate the project around our learning goals and not the other way around. 
 
 %Inactivity before development
 
