--- a/report/citations.bib
+++ b/report/citations.bib
@@ -560,3 +560,45 @@
 	year = {2013},
 	howpublished = "\url{https://projects.drogon.net/raspberry-pi/wiringpi/}"
 }
+
+@MISC{comp,
+	title = {Figure for the complex rangefinder},
+howpublished= "\url{https://electronics.stackexchange.com/questions/83328/real-time-short-distance-range-finder-and-visual-output}"
+}
+
+
+@MISC{refracfig,
+	title = {Figure for refraction of light},
+howpublished= "\url{http://spmphysics.onlinetuition.com.my/2013/07/refraction-of-light.html}"
+}
+
+
+@MISC{astarfig,
+	title = {Figure for the A* description},
+howpublished= "\url{http://www.policyalmanac.org/games/aStarTutorial.htm}"
+}
+
+@MISC{gpiolayout,
+	title = {Figure for Raspberry Pi GPIO layout},
+howpublished= "\url{http://www.policyalmanac.org/games/aStarTutorial.htm}"
+}
+
+@MISC{lidarint,
+	title = {Block of the LIDAR-lite},
+howpublished= "\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000548641-lidar-lite-block-diagram}"
+}
+
+@MISC{optfig,
+	title = {Figure for the opticalflow},
+howpublished= "\url{http://www.singahobby.com/files/images/Arduino-Optical-Flow-Sensor-3.jpg}"
+}
+
+@MISC{chassisfig,
+	title = {Figure for the chassis},
+howpublished= "\url{http://www.robotshop.com/en/dfrobot-4wd-arduino-mobile-platform.html}"
+}
+
+@MISC{slipringfig,
+	title = {Figure for the slipring},
+howpublished= "\url{http://img.alibaba.com/img/pb/563/889/871/871889563_606.jpg}"
+}
