--- a/report/sections/ch4-closeproximitydetection.tex
+++ b/report/sections/ch4-closeproximitydetection.tex
@@ -14,7 +14,7 @@ The ultrasonic sensors return distance measurements to the algorithm that then d
 	\quad
 	\begin{subfigure}[H]{0.4\textwidth}
 		\includegraphics[width=\textwidth]{images/hcsr04angle.png}
-		\subcaption{The measuring angle}
+		\subcaption{The measuring angle\cite{hcsr40datesheet}}
 		\label{fig:measuringangle}
 	\end{subfigure}
 \end{figure}
