--- a/report/sections/ch4-controller.tex
+++ b/report/sections/ch4-controller.tex
@@ -6,7 +6,7 @@ Our microcontroller of choice, the Raspberry Pi 2 Model B, is a preferred choice
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=.4]{images/GPIO_Pi2.png}
-	\caption{The pinout of the Raspberry Pi 2 model B, revision 2}
+	\caption{The pinout of the Raspberry Pi 2 model B, revision 2\cite{gpiolayout}}
 	\label{fig:gpioraspbi2}
 \end{figure}
 
