--- a/report/sections/ch4-laser.tex
+++ b/report/sections/ch4-laser.tex
@@ -6,7 +6,7 @@ Our laser of choice, the LIDAR-Lite SEN-13167, is a SoC (System-on-a-Chip) solut
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=.4]{images/internallidar.png}
-	\caption{An overview of the laser's internals}
+	\caption{An overview of the laser's internals\cite{lidarint}}
 	\label{fig:internallidar}
 \end{figure}
 
