--- a/report/sections/ch4-slipring.tex
+++ b/report/sections/ch4-slipring.tex
@@ -7,7 +7,7 @@ The slip ring used for this build is a SNM022A-06\cite{slipring}, which is a 6-w
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.5\linewidth]{images/slipring-pic.jpg}
-	\caption{The SNM022A-06}
+	\caption{The SNM022A-06\cite{slipringfig}}
 	\label{slipringpic}	
 \end{figure}
 
