--- a/report/sections/ch4-ultrasonic.tex
+++ b/report/sections/ch4-ultrasonic.tex
@@ -6,7 +6,7 @@ For the autonomous navigation, the rover will be using 3 ultrasonic sensors for 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.3\linewidth]{images/hcsr40.jpg}
-	\caption{The specific ultrasonic sensors are 3 \textbf{HC-SR04}.}
+	\caption{The specific ultrasonic sensors are 3 \textbf{HC-SR04}.\cite{hcsr40datesheet}}
 	\label{fig:ultrasonic_pic}
 \end{figure}
 
