--- a/report/sections/ch4-opticalflow.tex
+++ b/report/sections/ch4-opticalflow.tex
@@ -10,7 +10,7 @@ We used the CJMCU-110 Optical flow V1.0 from 3Drobotics. It uses the ADNS-3080 o
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.3\linewidth]{images/optical.jpg}
-	\caption{The optical flow sensor from 3D Robotics.}
+	\caption{The optical flow sensor from 3D Robotics.\cite{optfig}}
 \end{figure}
 
 During the development phase, we found out that no optical flow sensor was required for the SLAM package of our choice for ROS.
