learning goals done

--- a/process-analysis/sections/learning-goals.tex
+++ b/process-analysis/sections/learning-goals.tex
@@ -17,10 +17,10 @@ The group had a few common learnings goals which included learning how to apply 
 
 \section{Discussion and Conclusion}
 
-Getting our learning goals materialized was still hard to do, up until we had our status seminar and where we got some guidance from the supervisors. Personal learning goals should reflect on one student's ambition on what he or she would like to learn during a set semester and to what extend should it deepen its understanding in the set topic. Initially we set our learning goals too broad, which could have easily backfired us by the end of the semester, as we haven't concreticized the level of understanding that we would like to achieve. This was pointed out by our supervisors and after the input, all of our learning goals were changed and made more concrete. Setting our personal learning goals around our project seems to be logical, but having set our learning goals first, might have saved us some time to find a project to work on. Coming up with learning goals before concretisizing our project, could help us to: get a project we all have high level of interest in, formulate the project around our learning goals and not the other way around. 
+Getting our learning goals materialized was still hard to do, up until we had our status seminar and where we got some guidance from the supervisors. Personal learning goals should reflect on one student's ambition on what he or she would like to learn during a set semester and to what extent should it deepen ones understanding in the set topic. 
 
-%Inactivity before development
+Initially we set our learning goals to be too broad, which could have easily backfired on us by the end of the semester, as we haven't concreticized the level of understanding that we would like to achieve, and therefore could have been questioned on levels we never tried to understand. As this was pointed out to us during the status seminar, all of our learning goals were changed and made more concrete. 
 
-%our scope was too big. it did not match our learning goals
-% We spent too much time delving too deep into theory and not enough investigating tools
-% Even without issues, we would not have had time to combine our prototypes
+Setting our personal learning goals around the project seems to be logical, but having set our learning goals first, might have saved us some time to find the right project and topic to work on. Coming up with learning goals before concretisizing our project, could help us to get a project we all have high level of interest in, formulate the project around our learning goals and not the other way around, therefore making the process more efficient. That said, other aspects should be taken in consideration when coming up with our learning goals, like how relevant it is to our semester learning goals and to our study.
+
+That said, as we formulated our learning goals around a project we already set, our scope was way over our understanding and time-frame. That being said, it was also quite a new topic and one that needed a large amount of research for understanding. Even without all the arising issues we had during development, we would not have had enough time to finalize our set prototype requirements and to combine our separate parts which we developed.
