--- a/process-analysis/sections/methods-and-models.tex
+++ b/process-analysis/sections/methods-and-models.tex
@@ -1,6 +1,6 @@
 A few different methods and models were used during our P2 project. We used peer-reviewing after every major change to the report, where each group member read through the whole report to and gave feedback on what worked and what did not. The blackboard in the group room was always in use for visualization for different concepts or explanations, and the board was also used to keep track of different dates and important deadlines.\\
 Prototyping was a massive part of our development phase, where we used breadboards to prototype our circuits before creating the final versions.\\
-We also used a sequence diagram, 6W diagram and flow charts to visualize parts of the report but also our thinking process.
+We also used a sequence diagram for visualizing and understanding the code better, a 6-W diagram to break down our initial problem, flow charts to visualize parts of the report but also our thinking process.
 
 Other methods and models will be discussed in the \textit{Time and Resource Management} section. 
 \section{Discussion and Conclusion}
