Added personal and curriculum learning goals

--- a/process-analysis/sections/learning-goals.tex
+++ b/process-analysis/sections/learning-goals.tex
@@ -24,3 +24,5 @@ Initially we set our learning goals to be too broad, which could have easily bac
 Setting our personal learning goals around the project seems to be logical, but having set our learning goals first, might have saved us some time to find the right project and topic to work on. Coming up with learning goals before concretisizing our project, could help us to get a project we all have high level of interest in, formulate the project around our learning goals and not the other way around, therefore making the process more efficient. That said, other aspects should be taken in consideration when coming up with our learning goals, like how relevant it is to our semester learning goals and to our study.
 
 That said, as we formulated our learning goals around a project we already set, our scope was way over our understanding and time-frame. That being said, it was also quite a new topic and one that needed a large amount of research for understanding. Even without all the arising issues we had during development, we would not have had enough time to finalize our set prototype requirements and to combine our separate parts which we developed.
+
+\textit{Our personal learning goals can be found in Appendix \ref{appendix:personal-learning-goals}, while the curriculum learning goals in Appendix \ref{appendix:curriculum-learning-goals}.}
