--- a/report/citations.bib
+++ b/report/citations.bib
@@ -290,8 +290,14 @@
 	howpublished = "\url{http://www.bbc.com/news/science-environment-17557581}"
 }
 
+@MISC{GPS3,
+	title = {Global positioning system},
+	howpublished = "\url{http://en.wikipedia.org/wiki/Global_Positioning_System}"
+}
+
 @MISC{Photogrammetry,
-	howpublished = "\url{http://um3d.dc.umich.edu/documents/123D-Catch-Field-Guide-1.pdf}"
+	title = {Photogrammetry},
+	howpublished = "\url{http://en.wikipedia.org/wiki/Photogrammetry}"
 }
 
 @MISC{photo,
