--- a/process-analysis/sections/time-and-resources.tex
+++ b/process-analysis/sections/time-and-resources.tex
@@ -1,4 +1,18 @@
--- Description here --
+Given our large scope, getting a good overview of our time and resources was crucial. From the get-go we set up some milestones and the deadlines for completing them. We modeled our whole project around meeting milestones. We created a Gant diagram to visualize our milestones.
+
+In order to make sure we were progressing towards each milestone in a timely manner, we set up various meetings which often had small deadlines attached to them. Each meeting usually lasted 1 hour, and consisted of each member talking about their progress with their specific task and whom should be responsible for new tasks.
+
+(Picture of fist gant)
+
+As we were recieving the parts we ordered we realise they wouldn't arrive in time for us to start development at the time we intended. We then reevaluated our milestones and came up with a revised gant diagram.
+
+(Picture of second gant)
+
+We choose to use an online Kanban board for the purpose of keeping track of tasks. We separated tasks in 7 columns, each depicting a stage in the progress of the task.
+
+(picture of kanbanflow)
+
+In the first half of the project, classes had a big effect on how we scheduled meetings and set deadlines for both the big milestones and the smaller tasks. We avoided setting deadlines right after long school days. Because our scope was very large, we often used time allocated to exercises to work on our project instead.
 
 \section{Discussion and Conclusion}
 
