--- a/report/P2.tex
+++ b/report/P2.tex
@@ -106,8 +106,9 @@
 \clearpage
 \Urlmuskip=0mu plus 1mu\relax
 \sloppy
+%\nobibliography%{unsrt}
 \bibliographystyle{unsrt}
-\bibliography{citations}{}
+\bibliography{citations2.bib}{}
 
 %Other chapters ------------
 \chapter{Appendix}\label{ch:appendix}
