--- a/report/P2.tex
+++ b/report/P2.tex
@@ -106,9 +106,8 @@
 \clearpage
 \Urlmuskip=0mu plus 1mu\relax
 \sloppy
-%\nobibliography%{unsrt}
 \bibliographystyle{unsrt}
-\bibliography{citations2.bib}{}
+\bibliography{citations}{}
 
 %Other chapters ------------
 \chapter{Appendix}\label{ch:appendix}
