--- a/report/sections/titlepage.tex
+++ b/report/sections/titlepage.tex
@@ -19,7 +19,7 @@
 	Akbar Hussain\\
 	Torben Rosenørn
   }{%
-    1 % number of printed copies
+    3 % number of printed copies
   }{%
     \today % date of completion
   }%
@@ -29,5 +29,5 @@
   DK-6700 Esbjerg\\
   \href{http://sict.aau.dk}{http://sict.aau.dk}
 }{% the abstract
-	%TODO: Add abstract here
+	This project looks at the future needs for autonomous exploration of unknown environments and terrain. In the coming years humanity will push for more planetary and deep-sea exploration, and during this autonomous vehicles with capabilities of mapping unknown environments will play a major role. Maps of unknown planets or unmapped ocean bed will help prevent hazardous expeditions and will also gather data for researchers to process before visiting the unknown terrain with a larger scale expedition. Using a laser, ultrasonic sensors and a chassis, a low intelligence autonomous rover was created. It is capable of creating 2D maps using Hector SLAM on ROS with readings from the laser. The ultrasonic sensors were used to create a close proximity detection system, which helped the rover avoid obstacles it encountered in the unknown environments.
 }
