--- a/process-analysis/process-analysis.tex
+++ b/process-analysis/process-analysis.tex
@@ -2,6 +2,10 @@
 
 \begin{document}
 	
+	\input{sections/frontpage.tex}
+
+	\tableofcontents	
+	
 	\pagenumbering{arabic}
 	
 	%Chapter 1  ------------
