Finished the titlepage

--- a/process-analysis/sections/frontpage.tex
+++ b/process-analysis/sections/frontpage.tex
@@ -3,17 +3,16 @@
 
 \begin{center}
 % Upper part of the page
-\iflanguage{danish}{%
-	\includegraphics[width=0.6\textwidth]{images/aau_logo_de}
-}{%
-	\includegraphics[width=0.6\textwidth]{images/aau_logo_en}
-}\\[0.5cm]
-
+%\iflanguage{danish}{%
+%	\includegraphics[width=0.6\textwidth]{images/aau_logo_de}
+%}{%
+%	\includegraphics[width=0.6\textwidth]{images/aau_logo_en}
+%}\\[0.5cm]
 \textsc{\Large ED2 - P2 - H103}\\[0.6cm]
 
 % Title
 \HRule \\[0.9cm]
-{ \Huge \bfseries Mapping and navigation of unknown terrain }\\[0.4cm]
+{ \Huge \bfseries Process Analysis}\\[0.4cm]
 
 \HRule \\[0.5cm]
 
