Added TODO learning goals, finished tools and processes

--- a/process-analysis/sections/tools-and-processes.tex
+++ b/process-analysis/sections/tools-and-processes.tex
@@ -1,8 +1,22 @@
-To complete this project successfully many different tools and processes were used. The whole project written using \LaTeX and will also be used to produce the project presentation. Alongside \LaTeX we used Git repository as our version control system, where we used Github as our platform-as-a-service.\\
-Meetings were scheduled using the exchange calender provided by the university, where the meetings were set up a couple of days prior to taking place. During these minutes a note-taker would write down meeting minutes to documents everything that was discussed and to document each group members deadlines. The meeting minutes are posted on our project wiki that is hosted on Github along side our repository. Besides the meeting minutes, many of our other important documents were also hosted on the wiki. This included our time and resource management, group contract and so on.\\
-Peer-reviewing session were scheduled after each major deadline, to discuss the work that each individual had written and to ensure that the quality of the report lived up to expectations.\\
-To produce the code we used the Arduino IDE and BLANK.%no idea what to call the others things
-To keep track of our workflow we used an online Kanban board, where group members encouraged each other to keep it updated with the individual user stories. Deadlines and milestones were set to ensure that we kept on track. A Gantt diagram was \\
-Communication outside of the group was done either through our facebook group or facebook conversation. Emergency or off-site meetings were also at times held over Skype.\\
-The documentation of the development of our prototype was done using various pictures and videos.
+To complete this project successfully, different tools and processes were used. These are more \textit{commercial} compared to the ones in Chapter \ref{ch:methods-and-models}.
+
+The full report of the P2 project was written using \LaTeX ~, just as the \textit{process analysis} and the project presentation. Alongside \LaTeX ~we used a Git repository as our version control system, where we used GitHub as our platform-as-a-service for hosting and interfacing with this repository.
+
+Meetings were scheduled using an Exchange calendar, where the meetings were set up a couple of days prior to taking place. During these meetings a note-taker, whom we rotated on a weekly basis, would write down the meeting notes to documents everything that was discussed and to document each group members deadlines and tasks. We also distinguished between strategy and work meetings, where the first one was more formal and required meeting minutes, while the latter was just to brainstorm and work on the project. Supervisor meetings were called on an unregulated basis, when it was necessary.
+
+After the meeting, we posted the minute on our GitHub Wiki and also went over our backlog and added our tasks and to-dos. The GitHub Wiki served the purpose of storing meeting minutes, notes, but also our time and resource management, group contract and so on. 
+
+%deadline contract, supervisor contract
+Besides our group contract, we also wrote a supervisor contract, where we aligned our expectations with our supervisors and vice-versa. this contract has never been completely formalized. The deadline contract was something we came up with after a meeting regarding lack of motivation from certain team members on accomplishing their tasks on time. This contract stated that after a set amount of strikes, where the group member does not live up to their deadlines, we would raise the issue to our supervisors. This contract was signed by the group members, but never formalized due to an unacceptable point on the contract which was not approved by our supervisors.
+
+Communication outside of the group was done mainly on Facebook. When we could not be physically all present for our meetings, we held them over Skype.
+
+Peer-reviewing sessions were scheduled after each major deadline, to discuss the work that each individual had written and to ensure that the quality of the report lived up to expectations.
+
+To produce the code we used the Arduino IDE and other terminal based text editors, like \textit{nano} and \textit{vim}.
+
+To create UML diagrams, we used a tool called Visual Paradigm, that can generate all kinds of charts and diagrams based on the proper UML standard. To create flow charts and other figures, we used Google Draw, an online-based image editor and vector graphic tool.
+
+To keep track of our workflow we used an online Kanban board, where group members encouraged each other to keep it updated with the individual user stories, tasks. Deadlines and milestones were set to ensure that we were on track, while a Gantt diagram was used to visualize this.
+
 \section{Discussion and Conclusion}
