--- a/process-analysis/sections/learning-goals.tex
+++ b/process-analysis/sections/learning-goals.tex
@@ -26,3 +26,5 @@ Setting our personal learning goals around the project seems to be logical, but 
 That said, as we formulated our learning goals around a project we already set, our scope was way over our understanding and time-frame. That being said, it was also quite a new topic and one that needed a large amount of research for understanding. Even without all the arising issues we had during development, we would not have had enough time to finalize our set prototype requirements and to combine our separate parts which we developed.
 
 \textit{Our personal learning goals can be found in Appendix \ref{appendix:personal-learning-goals}, while the curriculum learning goals in Appendix \ref{appendix:curriculum-learning-goals}.}
+
+%TODO rephrase 'that said' above
