more or less finished time and resources

--- a/process-analysis/sections/time-and-resources.tex
+++ b/process-analysis/sections/time-and-resources.tex
@@ -1,19 +1,37 @@
-Given our large scope, getting a good overview of our time and resources was crucial. From the get-go we set up some milestones and the deadlines for completing them. We modeled our whole project around meeting milestones. We created a Gant diagram to visualize our milestones.
+Given our large scope, getting a good overview of our time and resources was crucial. From the get-go we set up some milestones and the deadlines for completing them. We modeled our whole project around meeting milestones. We created a Gantt-diagram to visualize our milestones.
 
 In order to make sure we were progressing towards each milestone in a timely manner, we set up various meetings which often had small deadlines attached to them. Each meeting usually lasted 1 hour, and consisted of each member talking about their progress with their specific task and whom should be responsible for new tasks.
 
-(Picture of fist gant)
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=.4]{images/gantt1.png}
+	\caption{}
+\end{figure}
 
 As we were recieving the parts we ordered we realise they wouldn't arrive in time for us to start development at the time we intended. We then reevaluated our milestones and came up with a revised gant diagram.
 
-(Picture of second gant)
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=.4]{images/gantt2.png}
+	\caption{}
+\end{figure}
 
 We choose to use an online Kanban board for the purpose of keeping track of tasks. We separated tasks in 7 columns, each depicting a stage in the progress of the task.
 
-(picture of kanbanflow)
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=.4]{images/kanban.png}
+	\caption{}
+\end{figure}
 
 In the first half of the project, classes had a big effect on how we scheduled meetings and set deadlines for both the big milestones and the smaller tasks. We avoided setting deadlines right after long school days. Because our scope was very large, we often used time allocated to exercises to work on our project instead.
 
+At the end of the project, we weren't satisfied with the state of our prototypes. Because of this, although officially we ended development, we kept trying to tweak the prototype in little ways.
+
 \section{Discussion and Conclusion}
 
-%We kept trying to fix things after development was over, which interferred with our testing.
+In terms of time and resource management, our biggest failing was our optimistic timeframe. We did not consider that the amount of time needed to learn the tools was so great. Our scope was too great, in the sense that we did not consider that we would need to spend so much time fixing errors.
+
+Despite our scope being too big, and us running into many more issues than we expected, we were still able to adjust our milestone deadlines, and scope, so that we could finish development with enough time for us to finish the rest of the report. Coming up with a second gantt-diagram was crucial, since if we had not done it, it would have been much harder for us to tell what we should adjust our scope to.
+
+Another big issue was that we waited too long to order parts, which meant that for around a third of our development, we had nothing to develop. Had we gotten the parts earlier, we might have realised that our scope was too big, and adjust it with much less backlash
